--- a/app/src/main/res/layout/login_view.xml
+++ b/app/src/main/res/layout/login_view.xml
@@ -131,5 +131,15 @@
             android:layout_below="@+id/email_block"
             android:onClick="onLoginClick"
             android:layout_centerHorizontal="true"/>
+
+
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/loginOrCreateButton"
+            app:itemView="@{data.itemView}"
+            app:items="@{data.items}" />
     </RelativeLayout>
 </layout>
