--- a/app/src/main/res/layout/activity_equalizer.xml
+++ b/app/src/main/res/layout/activity_equalizer.xml
@@ -18,7 +18,9 @@
         android:paddingTop="20dp"
         app:effectCount="5"
         app:effectDes="@array/effectDes"
-        app:effectThumb="@drawable/audioeffect_thumb" />
+        app:effectThumb="@drawable/audioeffect_thumb"
+        app:max="12"
+        app:min="-12" />
 
     <LinearLayout
         android:layout_width="match_parent"
