支持动态设置字体大小

--- a/app/src/main/res/layout/activity_equalizer.xml
+++ b/app/src/main/res/layout/activity_equalizer.xml
@@ -16,6 +16,7 @@
         android:background="#ccc"
         android:paddingBottom="15dp"
         android:paddingTop="20dp"
+        app:textSize="16sp"
         app:effectCount="5"
         app:effectDes="@array/effectDes"
         app:effectThumb="@drawable/audioeffect_thumb"
