--- a/app/src/main/res/layout/activity_equalizer.xml
+++ b/app/src/main/res/layout/activity_equalizer.xml
@@ -4,51 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d9000000"
     android:orientation="vertical"
-    android:weightSum="3"
     tools:context="com.shihc.demo.andrewdemo.view.QQHealthActivity">
 
     <com.shihc.demo.andrewdemo.view.EqualizerView
         android:id="@+id/equalizer_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:background="#ccc"
+        android:layout_weight="1"
         android:paddingBottom="15dp"
         android:paddingTop="20dp"
-        app:textSize="16sp"
         app:effectCount="5"
         app:effectDes="@array/effectDes"
         app:effectThumb="@drawable/audioeffect_thumb"
         app:max="12"
-        app:min="-12" />
+        app:min="-12"
+        app:textSize="16sp" />
 
-    <LinearLayout
+    <com.shihc.demo.andrewdemo.view.HorizontalChooseView
+        android:id="@+id/horizontal_choose_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="100dp">
 
-        <Button
+        <TextView
             android:id="@+id/btn1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="关闭"
+            android:textColor="@color/text_color_selector" />
 
-        <Button
+        <TextView
             android:id="@+id/btn2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="自定义"
+            android:textColor="@color/text_color_selector" />
 
-        <Button
+        <TextView
             android:id="@+id/btn3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="流行"
+            android:textColor="@color/text_color_selector" />
 
-        <Button
+        <TextView
             android:id="@+id/btn4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4" />
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="重低音"
+            android:textColor="@color/text_color_selector" />
+
+        <TextView
+            android:id="@+id/btn5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="人声"
+            android:textColor="@color/text_color_selector" />
+
+        <TextView
+            android:id="@+id/btn6"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="摇滚"
+            android:textColor="@color/text_color_selector" />
+
+        <TextView
+            android:id="@+id/btn7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="古典"
+            android:textColor="@color/text_color_selector" />
+    </com.shihc.demo.andrewdemo.view.HorizontalChooseView>
+
+
 </LinearLayout>
